--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,3 @@
 [build]
-  command = "npm run build"
-  publish = "dist/public"
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+  command = "npx prisma generate && npm run build"
+  publish = ".next"
