--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node -r dotenv/config dist/index.js",
+     "build": "next build",
+    "start": "next start",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
