--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "next": "^15.3.0",
+    "next-auth": "^4.24.11",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "prisma": "^6.6.0",
